# C-1421-carte-controle

./: .gitignore  README.txt
.metadata/: .log4j.xml  version.ini
C-1333_-_Mesures_emissions.X/: C-1333_-_Mesures_emissions.mc3  ChillerManager.c  ChillerManager.h  ControlBridge.c  ControlBridge.h  DS1775.c  DS1775.h  DebugInterface.c  DebugInterface.h  GPIO.c  GPIO.h  I2CEngine.c  I2CEngine.h  MeasureParticles.h  MeasureParticules.c  ParameterFile.c  TSL2591.c  (+5 more)
ESP32-Remote-Prototype/sbi-iot-client/main/: CMakeLists.txt  Global.cpp  Global.h  MemBlock.cpp  MemBlock.h  SleepData.cpp  SleepData.h  UIManager.cpp  UIManager.h  UIManager.hpp  espnowcomm.c  espnowcomm.cpp  espnowcomm.h  main.cpp
ESP32-Remote-Prototype/sbi-iot-client/main/UI/: CommonUI.cpp  CommonUI.h  CommonUI.hpp  ControlViewUI.cpp  ControlViewUI.hpp  EScreen.h  EScreen.hpp  HomeViewUI.cpp  HomeViewUI.hpp  MainUI.c  MainUI.cpp  MainUI.h  MainUI.hpp  PoweringOnUI.cpp  PoweringOnUI.h  PoweringOnUI.hpp  PoweringOnViewUI.cpp  PoweringOnViewUI.hpp  SettingsUI.cpp  SettingsUI.h  SettingsUI.hpp  UIPoweredOffView.cpp  UIPoweredOffView.hpp
ESP32-Remote-Prototype/sbi-iot-client/main/assets/: EmbeddedFiles.c  EmbeddedFiles.h
ESP32-Remote-Prototype/sbi-iot-server/main/: CMakeLists.txt  Event.c  Event.h  OTACheck.c  OTACheck.h  espnowprocess.c  espnowprocess.h  fwconfig.h  hardwaregpio.c  hardwaregpio.h  hwconfig.h  log.c  log.h  main.c  main.h  settings.c  settings.h  spiff.c  spiff.h  uartbridge.c  uartbridge.h  version.h  webserver.c  webserver.h
ESP32-Remote-Prototype/sbi-iot-server/main/assets/: EmbeddedFiles.c  EmbeddedFiles.h
ESP32-Remote-Prototype/sbi-iot-server/main/iot/: IoTBridge.c  IoTBridge.h
ESP32-Remote-Prototype/sbi-iot-server/main/uartbridge/: stovemb.c  stovemb.h  uartbridge.c  uartbridge.h  ub_deviceparameter.c  ub_deviceparameter.h
ESP32-Remote-Prototype/sbi-iot-server/main/webserver/: APIGet.c  APIGet.h  APIPost.c  APIPost.h  Common.h  OTAUploadESP32.c  OTAUploadESP32.h  OTAUploadSTM32.c  OTAUploadSTM32.h  StaticFileServe.c  StaticFileServe.h  URL.h  apiurl.h  webserver.c  webserver.h
(+705 files in other folders)
