
idf_component_register(SRCS "main.cpp" "Global.cpp" "espnowcomm.cpp" "SleepData.cpp" "MemBlock.cpp" 
    "assets/EmbeddedFiles.c" "assets/EmbeddedFilesBin.c"
    "UIManager.cpp" 
    "UI/CommonUI.cpp" 
    "UI/ControlViewUI.cpp" 
    "UI/PoweringOnViewUI.cpp" 
    "UI/SettingsUI.cpp" 
    "UI/HomeViewUI.cpp"
    
    INCLUDE_DIRS ".")
